[package]
name = "s3-stress"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1.5.4", features = ["behavior-version-latest"] }
aws-runtime = "1.3.1"
aws-sdk-s3 = "1.42.0"
aws-types = "1.3.3"
dotenvy = "0.15.7"
futures = "0.3.30"
inquire = "0.7.5"
regex = "1.10.6"
tokio = { version = "1.39.2", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4"] }
