[package]
name = "s3-stress"
version = "0.1.5"
edition = "2021"
author = "Trevor Sullivan <trevor@trevorsullivan.net>"
description = "An interactive CLI tool that lets you perform various operations against the Amazon S3 service APIs."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1.5.4", features = ["behavior-version-latest"] }
aws-runtime = "1.3.1"
aws-sdk-account = "1.37.0"
aws-sdk-s3 = "1.42.0"
aws-types = "1.3.3"
colorize = "0.1.0"
dotenvy = "0.15.7"
futures = "0.3.30"
inquire = "0.7.5"
regex = "1.10.6"
tokio = { version = "1.39.2", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
# panic = "abort"